--- a/config/config.yaml
+++ b/config/config.yaml
@@ -20,8 +20,8 @@ storage:
   # 数据格式选项
   formats:
     sqlite: true       # 主存储（必须启用）
-    txt: false         # 是否生成 TXT 快照
-    html: false        # 是否生成 HTML 报告（⚠️ 邮件推送必须设为 true，否则会报错）
+    txt: true         # 是否生成 TXT 快照
+    html: true        # 是否生成 HTML 报告（⚠️ 邮件推送必须设为 true，否则会报错）
 
   # 本地存储配置
   local:
@@ -33,7 +33,7 @@ storage:
   # 建议将敏感信息配置在 GitHub Secrets 或环境变量中
   remote:
     # 数据保留天数（0 = 不清理远程数据）
-    retention_days: 0
+    retention_days: 7
     # S3 兼容配置
     endpoint_url: ""          # 服务端点（或环境变量 S3_ENDPOINT_URL）
                               # Cloudflare R2: https://<account_id>.r2.cloudflarestorage.com
@@ -73,7 +73,7 @@ crawler:
 
 # 推送模式选择
 report:
-  mode: "daily" # 可选: "daily"|"incremental"|"current"
+  mode: "current" # 可选: "daily"|"incremental"|"current"
   rank_threshold: 5 # 排名高亮阈值
   sort_by_position_first: false # 排序优先级：true=先按配置位置排序，false=先按热点条数排序
   max_news_per_keyword: 0 # 每个关键词最大显示数量，0=不限制
